# birdclef-2025

./: .gitignore  .scratch  README.md  app.def  pyproject.toml  requirements.txt
birdclef/: __init__.py  cli.py  config.py  gpu.py  luigi.py  model_config.py  spark.py
birdclef/classifier/: learner.py  xgboost.py
birdclef/eda/: __init__.py  duration.py
birdclef/etl/: __init__.py
birdclef/etl/embed/: __init__.py
birdclef/etl/embed/base/: soundscapes.py  species.py
birdclef/etl/embed/birdnet/: __init__.py  data.py  workflow.py
birdclef/etl/parquet/: workflow.py
birdclef/infer/: workflow.py
birdclef/inference/: __init__.py  base.py  birdnet.py
birdclef/kaggle/: compile.py  main.py
birdclef/mel2vec/: callback.py  loaders.py  workflow.py
birdclef/mfcc/: workflow.py
birdclef/model/: __init__.py
birdclef/model/birdnet/: __init__.py  data.py  model.py  submit.py  train.py
birdclef/torch/: data.py  model.py  workflow.py  workflow_v2.py
birdclef/torch/v2/: data.py  workflow.py
notebooks/eda/: 000-soundscape-pacman.ipynb  001-dataset-exploration.ipynb  002-opensoundscape.ipynb  003-bmz-parquet.ipynb  004-embeddings.ipynb  005-hdbscan.ipynb  006-bmz-columns.ipynb  007-train-embed.ipynb  20250531-mg-sample-size.ipynb
notebooks/embed/: 20250524-mg-embed.ipynb  20250527-mg-validate-embed.ipynb
notebooks/modeling/: 011725-ac-profiling.ipynb  020325-ac-leaf.ipynb  20250528-mg-xgboost.ipynb  20250530-mg-torch-classifier.ipynb  20250605-openvino-perch.ipynb  20250606-openvino-linear.ipynb  20250606-tflite.ipynb  20250613-ac-validate-aggregation.ipynb  20250615-ac-tflite-birdnet.ipynb  ProtoCLR.ipynb
notebooks/modeling/tb_logs/linear_classifier/version_0/: events.out.tfevents.1748662877.atl1-1-02-005-35-0.pace.gatech.edu.1852521.0
notes/: 00-durations-duckdb.md  01-soundscape-embeddings.md  02-opensoundscapes.md  03-deployment.md
sbatch/: eda-duration.sbatch  embed-soundscapes.sbatch  infer-soundscape-cpu.sbatch  infer-soundscape-gpu.sbatch  infer-train-cpu.sbatch  infer-train-gpu.sbatch  sync-project.sbatch  sync-scratch.sbatch  train-birdnet.sbatch
sbatch/kaggle/: compile.sbatch
scripts/: activate  build-apptainer.sh  check-parquet.sh  copy-models.sh  salloc-cpu  slurm-alloc  start-apptainer.sh
scripts/sbatch/: embed-soundscapes.sbatch
scripts/utils/: slurm-venv.sh
tests/: conftest.py
tests/etl/embed/: test_birdnet_workflow.py
tests/inference/: test_birdnet.py
user/acmiyaguchi/: README.md
user/acmiyaguchi/kaggle/: BirdSetEfficientNetB1.sbatch  Perch.sbatch  compile-Perch.sbatch  copy-models.sbatch
user/acmiyaguchi/quantization/: README.md  mel2vec.sbatch  melspectrogram.ipynb  melspectrogram.sbatch  prep-cross-entropy.ipynb  quantization.ipynb
user/acmiyaguchi/quantization/notebooks/: 02-prep-cross-entropy.ipynb  03-cross-entropy.ipynb  04-word2vec.ipynb  05-check-w2v-embed.ipynb
user/mgustineli/: ondemand-infer-soundscape-cpu.sh  ondemand-torch-classifier.sh  ondemand-xgboost.sh  sbatch-infer-soundscape-cpu.sh  slurm-infer-soundscape-cpu.sh  slurm-infer-soundscape.sh
