[project]
name = "birdclef"
version = "0.2.0"
authors = [{ name = "Anthony Miyaguchi", email = "acmiyaguchi@gatech.edu" }]
description = "DS@GT BirdCLEF helper package"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "tqdm",
    "pyspark >= 3.4.0",
    "pyarrow",
    "scikit-learn",
    "torch",
    "torchvision",
    "torchaudio",
    "librosa",
    "sox",
    "soundfile",
    "ffmpeg-python",
    "lightning",
    "torchmetrics",
    "numba",
    "pacmap",
    "typer",
    "stumpy",
    "luigi",
    "opensoundscape>=0.12.0",
    "bioacoustics-model-zoo",
    "tensorflow",
    "tensorflow-hub>=0.16.1",
    "timm>=1.0.15",
    "transformers>=4.51.3",
    "contexttimer>=0.3.3",
]

[project.optional-dependencies]
dev = [
    "pip",
    "uv",
    "jupyterlab",
    "ruff",
    "pre-commit",
    "pytest",
    "pace-job-monitoring@git+https://github.com/dsgt-kaggle-clef/pace-job-monitoring.git#main",
]

[project.urls]
Homepage = "https://github.com/dsgt-kaggle-clef/birdclef-2025"
Issues = "https://github.com/dsgt-kaggle-clef/birdclef-2025/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["birdclef*"]
namespaces = false

[tool.uv.sources]
bioacoustics-model-zoo = { git = "https://github.com/kitzeslab/bioacoustics-model-zoo" }
